syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManager";

package br.com.zup.edu;

service KeyManagerRegisterService {
  rpc register (CreateKeyRequest) returns (CreateKeyResponse) {}
}

service KeyManagerDeleteService {
  rpc delete (DeleteKeyRequest) returns (DeleteKeyResponse) {}
}

enum KeyType {
  UNKNOWN_KEY_TYPE = 0;
  CPF = 1;
  PHONE_NUMBER = 2;
  EMAIL = 3;
  RANDOM_KEY = 4;
}

enum AccountType {
  UNKNOWN_ACCOUNT_TYPE = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message CreateKeyRequest {
  string clientId = 1;
  string keyValue = 2;
  KeyType keyType = 3;
  AccountType accountType = 4;
}

message CreateKeyResponse {
  string pixId = 1;
}

message DeleteKeyRequest {
  string pixId = 1;
  string clientId = 2;
}

message DeleteKeyResponse {
  string pixId = 1;
}